--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tauri-apps/api": "^1.4.0",
+    "cssnano": "^6.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tw-elements-react": "1.0.0-alpha1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
