--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@tauri-apps/api": "^1.4.0",
+    "@tauri-apps/api": "^1.5.1",
     "cssnano": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tw-elements-react": "1.0.0-alpha1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@tauri-apps/cli": "^1.4.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+    "@faker-js/faker": "^8.3.1",
+    "@tauri-apps/cli": "^1.5.6",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@types/utf8": "^3.0.3",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "letterparser": "^0.1.2",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2",
+    "typescript-email-parser": "^0.1.3",
+    "utf8": "^3.0.0",
+    "vite": "^4.5.0"
   }
 }
